[package]
name = "libtailscale"
version.workspace = true
edition = "2021"
description = "Rust binding to libtailscale"
keywords = ["tailscale"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/messense/libtailscale-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "libtailscale-sys"]

[workspace.package]
version = "0.1.5"

[dependencies]
libtailscale-sys = { path = "libtailscale-sys", version = "0.1.5" }
