[package]
name = "libtailscale"
version.workspace = true
edition = "2021"
description = "Rust binding to libtailscale"
keywords = ["tailscale"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/messense/libtailscale-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "libtailscale-sys"]

[workspace.package]
version = "0.2.0"

[dependencies]
libc = "0.2.140"
libtailscale-sys = { path = "libtailscale-sys", version = "0.2.0" }

[dev-dependencies]
bytes = "1.4.0"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["http1", "server"] }
tokio = { version = "1.26.0", features = ["full"] }
