[package]
name = "libtailscale-sys"
version.workspace = true
edition = "2021"
description = "Rust FFI to libtailscale C API"
keywords = ["tailscale"]
license = "MIT"
repository = "https://github.com/messense/libtailscale-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0.79"
